--- a/django_blog/templates/auth/login.html
+++ b/django_blog/templates/auth/login.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
+{% load static %}
 {% block title %}Login{% endblock %}
+{% block extra_head %}
+<link rel="stylesheet" href="{% static 'css/login.css' %}">
+{% endblock %}
 {% block content %}
 <h2>Login</h2>
 <form method="post">
@@ -7,4 +11,7 @@
   {{ form.as_p }}
   <button type="submit">Login</button>
 </form>
+{% endblock %}
+{% block extra_scripts %}
+<script src="{% static 'js/login.js' %}"></script>
 {% endblock %}
