--- a/django_blog/templates/auth/register.html
+++ b/django_blog/templates/auth/register.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
+{% load static %}
 {% block title %}Register{% endblock %}
+{% block extra_head %}
+<link rel="stylesheet" href="{% static 'css/register.css' %}">
+{% endblock %}
 {% block content %}
 <h2>Register</h2>
 <form method="post">
@@ -7,4 +11,7 @@
   {{ form.as_p }}
   <button type="submit">Create account</button>
 </form>
+{% endblock %}
+{% block extra_scripts %}
+<script src="{% static 'js/register.js' %}"></script>
 {% endblock %}
