--- a/django_blog/blog/templates/blog/posts/creating.html
+++ b/django_blog/blog/templates/blog/posts/creating.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
-{% block title %}Post Form{% endblock %}
+{% block title %}Create Post{% endblock %}
 {% block content %}
-<h2>{{ view.object|yesno:"Edit Post,Create Post" }}</h2>
+<h2>Create Post</h2>
 <form method="post">
   {% csrf_token %}
   {{ form.as_p }}
