--- a/django_blog/blog/templates/blog/posts/viewing.html
+++ b/django_blog/blog/templates/blog/posts/viewing.html
@@ -6,7 +6,7 @@
 <p><small>by {{ post.author.username }} • {{ post.published_date }}</small></p>
 {% if user.is_authenticated and user == post.author %}
 <p>
-  <a href="{% url 'post-edit' post.pk %}">Edit</a> |
+  <a href="{% url 'post-update' post.pk %}">Edit</a> |
   <a href="{% url 'post-delete' post.pk %}">Delete</a>
 </p>
 {% endif %}
