--- a/django_blog/blog/templates/blog/comment_edit_form.html
+++ b/django_blog/blog/templates/blog/comment_edit_form.html
@@ -1,11 +1,11 @@
 {% extends "blog/base.html" %}
-{% block title %}Create Post{% endblock %}
+{% block title %}Edit Comment{% endblock %}
 {% block content %}
-<h2>Create Post</h2>
+<h2>Edit Comment</h2>
 <form method="post">
   {% csrf_token %}
   {{ form.as_p }}
   <button type="submit">Save</button>
 </form>
-<p><a href="{% url 'posts' %}">Cancel</a></p>
+<p><a href="{% url 'post-detail' object.post.pk %}">Cancel</a></p>
 {% endblock %}
