--- a/django_blog/blog/templates/blog/logout.html
+++ b/django_blog/blog/templates/blog/logout.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "blog/base.html" %}
 {% block title %}Logout{% endblock %}
 {% block content %}
 <h2>You have been logged out.</h2>
