--- a/django_blog/blog/templates/blog/post_edit_form.html
+++ b/django_blog/blog/templates/blog/post_edit_form.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "blog/base.html" %}
 {% block title %}Edit Post{% endblock %}
 {% block content %}
 <h2>Edit Post</h2>
