--- a/django_blog/blog/templates/blog/posts.html
+++ b/django_blog/blog/templates/blog/posts.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "blog/base.html" %}
 {% block title %}Posts - Django Blog{% endblock %}
 
 {% block content %}
