--- a/django_blog/blog/templates/blog/register.html
+++ b/django_blog/blog/templates/blog/register.html
@@ -1,17 +1,12 @@
-{% extends "base.html" %}
-{% load static %}
-{% block title %}Register{% endblock %}
-{% block extra_head %}
-<link rel="stylesheet" href="{% static 'css/register.css' %}">
-{% endblock %}
-{% block content %}
+{% extends "blog/base.html" %} {% load static %} {% block title %}Register{%
+endblock %} {% block extra_head %}
+<link rel="stylesheet" href="{% static 'css/register.css' %}" />
+{% endblock %} {% block content %}
 <h2>Register</h2>
 <form method="post">
-  {% csrf_token %}
-  {{ form.as_p }}
+  {% csrf_token %} {{ form.as_p }}
   <button type="submit">Create account</button>
 </form>
-{% endblock %}
-{% block extra_scripts %}
+{% endblock %} {% block extra_scripts %}
 <script src="{% static 'js/register.js' %}"></script>
 {% endblock %}
