--- a/django_blog/blog/templates/blog/post_details.html
+++ b/django_blog/blog/templates/blog/post_details.html
@@ -1,35 +1,32 @@
-{% extends "blog/base.html" %} {% block title %}{{ post.title }}{% endblock %}
+{% extends "blog/base.html" %}
+{% block title %}{{ post.title }}{% endblock %}
 {% block content %}
 <h2>{{ post.title }}</h2>
 <p>{{ post.content }}</p>
-<p><small>By {{ post.author.username }} • {{ post.published_date }}</small></p>
+<p>
+  Tags:
+  {% for t in post.tags.all %}
+    <a href="{% url 'tag-posts' t.name %}">{{ t.name }}</a>{% if not forloop.last %}, {% endif %}
+  {% empty %} None
+  {% endfor %}
+</p>
 
-<hr />
 <h3>Comments</h3>
+<ul>
+  {% for comment in post.comment_set.all %}
+    <li>{{ comment.author }}: {{ comment.content }}</li>
+  {% empty %}
+    <li>No comments.</li>
+  {% endfor %}
+</ul>
 
-{% for comment in post.comment_set.all %}
-<div style="margin-bottom: 10px">
-  <p>{{ comment.content }}</p>
-  <small>by {{ comment.author.username }} • {{ comment.created_at }}</small>
-  {% if user.is_authenticated and user == comment.author %} |
-  <a href="{% url 'comment-edit' comment.pk %}">Edit</a> |
-  <a href="{% url 'comment-delete' comment.pk %}">Delete</a>
-  {% endif %}
-</div>
-{% empty %}
-<p>No comments yet.</p>
-{% endfor %} {% if user.is_authenticated %}
-<h4>Add a Comment</h4>
-<form method="post" action="{% url 'comment-new' post_id=post.pk %}">
+{% if user.is_authenticated %}
+<form action="{% url 'comment-new' post.pk %}" method="post">
   {% csrf_token %}
-  <textarea name="content" rows="3" required></textarea>
-  <button type="submit">Post Comment</button>
+  {{ form.as_p }}
+  <button type="submit">Add Comment</button>
 </form>
-
 {% else %}
-<p><a href="{% url 'login' %}">Login</a> to leave a comment.</p>
+<p><a href="{% url 'login' %}">Login</a> to add a comment.</p>
 {% endif %}
-
-<hr />
-<p><a href="{% url 'posts' %}">← Back to all posts</a></p>
 {% endblock %}
