--- a/django_blog/blog/templates/blog/post_form.html
+++ b/django_blog/blog/templates/blog/post_form.html
@@ -1,11 +1,10 @@
 {% extends "blog/base.html" %}
-{% block title %}Create Post{% endblock %}
+{% block title %}New Post{% endblock %}
 {% block content %}
-<h2>Create Post</h2>
+<h2>New Post</h2>
 <form method="post">
   {% csrf_token %}
   {{ form.as_p }}
   <button type="submit">Save</button>
 </form>
-<p><a href="{% url 'posts' %}">Cancel</a></p>
 {% endblock %}
